--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.revolut</groupId>
-    <artifactId>money-transfer</artifactId>
+    <artifactId>money-transferRequest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <kotlin.version>1.3.50</kotlin.version>
+        <exposed.version>0.14.1</exposed.version>
+        <logback.version>1.2.3</logback.version>
+        <arrow.version>0.8.2</arrow.version>
+        <h2.version>1.4.199</h2.version>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <assertj.version>3.13.2</assertj.version>
+<!--        <mockk.version>1.9.3</mockk.version>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <name>jcenter</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -22,6 +35,36 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.exposed</groupId>
+            <artifactId>exposed</artifactId>
+            <version>${exposed.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.arrow-kt</groupId>
+            <artifactId>arrow-core</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>8.0.17</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -36,6 +79,13 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>io.mockk</groupId>-->
+<!--            <artifactId>mockk</artifactId>-->
+<!--            <version>${mockk.version}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
     </dependencies>
 
